Fix for tables to never get cut off
Changed tables to always use a fixed layout, width 100% to ensure they can never be cut off the screen

--- a/University/Admin assets/CSS/build-uhi-main.css
+++ b/University/Admin assets/CSS/build-uhi-main.css
@@ -3469,14 +3469,8 @@ th, td {
   line-height: 1.2;
   margin-bottom: 2rem;
   overflow-wrap: break-word;
-}
-
-@media (max-width: 500px) {
-  .content-type-modifier--typography table,
-  .coursedetails table {
-    table-layout: fixed;
-    width: 100%;
-  }
+  table-layout: fixed;
+  width: 100%;
 }
 
 .content-type-modifier--typography table,
